Fixed issues with namewrapping due to display name change on user displays inside message displays also fixed new issue where if people use a blank.png for a profile picture it just looks like blank space in user list

--- a/webbage.chat.web/content/css/site.css
+++ b/webbage.chat.web/content/css/site.css
@@ -145,15 +145,18 @@ body {
 .user-display {
     position: relative;
 }
-.user-display span {
-    display: inline-block;
+    .user-display span {
+        display: inline-block;
 
-    -ms-text-overflow: ellipsis;
-    -o-text-overflow: ellipsis;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-}
+        -ms-text-overflow: ellipsis;
+        -o-text-overflow: ellipsis;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+    }
+    .user-display img {
+        border: 1px solid #cdcdcd;
+    }
 
 .user-display.xs {
     margin-left: 2px;
@@ -171,6 +174,8 @@ body {
     width: 100%;
     margin-top: 5px;
     text-align: right;
+    white-space: nowrap;
+    overflow: hidden;
 }
     .user-display.sm img {
         height: 19px;
@@ -181,7 +186,7 @@ body {
         font-size: 0.89em;
         font-style: italic;
         margin-right: 10px;
-        max-width: 55px;
+        max-width: 70%;
     }
 
 .user-display.lg {
